--- a/src/pages/reset/reset.scss
+++ b/src/pages/reset/reset.scss
@@ -1,4 +1,4 @@
-page-home {
+page-reset {
     ion-content{  
     
         background-image: url(https://lh5.ggpht.com/7iEqEROoV-l8oHbpYAp1OjY9qJJjAsxAybza2hmDKT8BX-ZnvN2avBD6SfYAiKV67w=h900);
